--- a/app/index.html
+++ b/app/index.html
@@ -5,9 +5,13 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <link href="./tailwind.css" rel="stylesheet" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title>Grocery Store</title>
   </head>
   <body>
+    <h1 class="text-center font-extrabold text-6xl">Grocery Store</h1>
+    <div
+      class="container flex flex-wrap items-center justify-around w-full h-full m-auto"
+    ></div>
     <div id="app"></div>
     <script type="module" src="/JS/main.js"></script>
   </body>
