--- a/app/index.html
+++ b/app/index.html
@@ -2,13 +2,19 @@
 <html lang="en" style="font-family: 'Parkinsans', sans-serif">
   <head>
     <meta charset="UTF-8" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Parkinsans&display=swap"
+      rel="stylesheet"
+    />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <link href="./tailwind.css" rel="stylesheet" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Grocery Store</title>
   </head>
   <body>
-    <h1 class="text-center font-extrabold text-6xl">Grocery Store</h1>
+    <h1 class="text-center font-extrabold text-6xl text-black">
+      Grocery Store
+    </h1>
     <div
       class="container flex flex-wrap items-center justify-around w-full h-full m-auto"
     ></div>
