--- a/app/index.html
+++ b/app/index.html
@@ -18,6 +18,10 @@
     <div
       class="container flex flex-wrap items-center justify-around w-full h-full m-auto"
     ></div>
+    <h1 class="text-center font-extrabold text-6xl text-black">Cart</h1>
+    <div
+      class="cart-container flex flex-wrap items-center justify-around w-full h-full m-auto"
+    ></div>
     <div id="app"></div>
     <script type="module" src="/JS/main.js"></script>
   </body>
